# touchstone_converter

./: .gitignore  CMakeLists.txt  LICENSE  MACOS_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VSCODE_FIX_GUIDE.md  diagnose_vscode.sh  run_converter.sh  setup_vscode.sh  test_converter.sh
examples/: sample.s2p  sample_ri.s2p  sample_v2.ts  test1_output.ts  test2_output.ts  test3_output.s2p  test4_output.s2p
include/: touchstone.h
src/: main.cpp  touchstone.cpp
